# syn-image-detection

./: .gitignore  PAPER.md  README.md  RUNS.md  SPEC.md  pyproject.toml
configs/: constrained.yaml  open_truefake_social.yaml
configs/archive/: constrained_multicrop.yaml  constrained_multicrop_smallimg.yaml  constrained_smallimg_lr1e4.yaml  constrained_smallimg_lr2e4.yaml  constrained_smallimg_moredata.yaml  constrained_smallimg_patchmask.yaml  constrained_smallimg_trainonly.yaml  constrained_unfreeze_last1_gentle.yaml  constrained_unfreeze_last2.yaml  constrained_unfreeze_last2_backbone5e6.yaml  constrained_unfreeze_last2_smallimg_moredata.yaml  constrained_unfreeze_last2_smallimg_moredata_100k.yaml  constrained_unfreeze_last2_smallimg_moredata_backbone5e6.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3_backbone5e6.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3_patchmask025.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3_patchmask05.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3_seed2025.yaml  constrained_unfreeze_last2_smallimg_moredata_epochs3_seed7.yaml  constrained_unfreeze_last2_smallimg_moredata_head2e4.yaml  constrained_unfreeze_last2_smallimg_moredata_patchmask05.yaml  constrained_unfreeze_last2_smallimg_moredata_seed2024.yaml
paper/: paper.md
scripts/: run_constrained.sh  run_final_squeeze.sh  run_metric_improvements.sh  run_next_optimizations.sh  run_open_truefake_social.sh
src/me26sid/: __init__.py  calibrate.py  cli.py  compare.py  config.py  data.py  ensemble.py  eval.py  metrics.py  model.py  predict.py  train.py  utils.py
tests/: test_calibrate.py  test_config.py  test_data.py  test_eval.py  test_metrics.py  test_predict.py  test_run_naming.py  test_train.py
